[gd_scene load_steps=6 format=3 uid="uid://qyurp66gp86v"]

[ext_resource type="Script" path="res://scenes/user interface/ui.gd" id="1_6nuit"]
[ext_resource type="FontFile" uid="uid://b6l5jpx575lfx" path="res://graphics/fonts/PixelOperator8-Bold.ttf" id="4_k3msv"]
[ext_resource type="FontFile" uid="uid://coleh00yjo2xv" path="res://graphics/fonts/PixelOperator8.ttf" id="5_8sgj1"]

[sub_resource type="Gradient" id="Gradient_d8mdt"]
offsets = PackedFloat32Array(0.263889, 0.303571, 0.779762, 0.847222, 0.878968, 1)
colors = PackedColorArray(1, 0.843137, 0.843137, 1, 0, 1, 1, 1, 0, 1, 1, 1, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_rfww1"]
gradient = SubResource("Gradient_d8mdt")
width = 32
height = 32
fill = 1
fill_from = Vector2(0.478632, 0.501832)
fill_to = Vector2(0.896215, 0.159951)

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_6nuit")

[node name="StatsControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -47.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.8, 0.8)
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2

[node name="GridContainer" type="GridContainer" parent="StatsControl"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -106.0
offset_top = -21.0
offset_bottom = 21.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(0.7, 0.7)
size_flags_horizontal = 8
size_flags_vertical = 8
columns = 2

[node name="KillsLabel" type="Label" parent="StatsControl/GridContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/shadow_outline_size = 0
theme_override_fonts/font = ExtResource("4_k3msv")
theme_override_font_sizes/font_size = 16
text = "Kills:"

[node name="KillsAmount" type="Label" parent="StatsControl/GridContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/shadow_outline_size = 0
theme_override_fonts/font = ExtResource("5_8sgj1")
theme_override_font_sizes/font_size = 16
text = "0"

[node name="PoolsLabel" type="Label" parent="StatsControl/GridContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/shadow_outline_size = 0
theme_override_fonts/font = ExtResource("4_k3msv")
theme_override_font_sizes/font_size = 16
text = "Pools:"

[node name="PoolsAmount" type="Label" parent="StatsControl/GridContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/shadow_outline_size = 0
theme_override_fonts/font = ExtResource("5_8sgj1")
theme_override_font_sizes/font_size = 16
text = "0"

[node name="LifeHBoxContainer" type="HBoxContainer" parent="StatsControl"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -52.0
offset_top = -16.0
offset_right = 52.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.7, 0.7)
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TextureRect0" type="TextureRect" parent="StatsControl/LifeHBoxContainer"]
layout_mode = 2
texture = SubResource("GradientTexture2D_rfww1")
stretch_mode = 2

[node name="TextureRect1" type="TextureRect" parent="StatsControl/LifeHBoxContainer"]
layout_mode = 2
texture = SubResource("GradientTexture2D_rfww1")
stretch_mode = 2

[node name="TextureRect2" type="TextureRect" parent="StatsControl/LifeHBoxContainer"]
layout_mode = 2
texture = SubResource("GradientTexture2D_rfww1")
stretch_mode = 2
